--- a/shop.html
+++ b/shop.html
@@ -484,16 +484,16 @@
                                     <div class="grid__column-2-4">
                                         <a class="home-product-item-link" href="/product6.html">
                                             <div class="home-product-item">
-                                                <div class="home-product-item-img" style="background-image: url(https://down-vn.img.susercontent.com/file/8808f23d33f856abafb8084dfeccc400_tn);"></div>
+                                                <div class="home-product-item-img" style="background-image: url(https://down-vn.img.susercontent.com/file/sg-11134201-23010-66cuhzn5nwmv12);"></div>
                                                 <!-- <img class="home-product-item-img" src="https://down-vn.img.susercontent.com/file/8808f23d33f856abafb8084dfeccc400_tn" alt=""> -->
                                                 <div class="home-product-item-info">
-                                                    <span class="home-product-item-name">Máy ảnh Canon EOS RP (Body)- hàng chính hãng Lê Bảo Minh</span>
+                                                    <span class="home-product-item-name">Bộ Nắp đậy Body + lens Panasonic Lumix - M43</span>
                                                     <div class="home-product-item-price">
                                                         <!-- <span class="home-product-item-price-old-icon">₫</span>
                                                         <span class="home-product-item-price-old">20.590.000</span> -->
                                                         <div class="home-product-item-price-current-box">
                                                             <span class="home-product-item-price-current-icon">₫</span>
-                                                            <span class="home-product-item-price-current">29.590.000</span>
+                                                            <span class="home-product-item-price-current">50.000</span>
                                                         </div>
                                                     </div>
                                                     <div class="home-product-item-soldinfo">
@@ -504,14 +504,14 @@
                                                             <i class="home-product-item-rating-icon fa-solid fa-star"></i>
                                                             <i class="home-product-item-rating-icon fa-solid fa-star"></i>
                                                         </div>
-                                                        <div class="home-product-item-soldcount">Đã bán 1</div>
+                                                        <div class="home-product-item-soldcount">Đã bán 4</div>
                                                     </div>
-                                                    <div class="home-product-item-favorite">
+                                                    <!-- <div class="home-product-item-favorite">
                                                         <span>Yêu thích</span></div>
                                                     <div class="home-product-item-saleoff">
                                                         <span class="home-product-item-saleoff-percent">10%</span>
                                                         <span class="home-product-item-saleoff-lable">GIẢM</span>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </a>
@@ -520,16 +520,16 @@
                                     <div class="grid__column-2-4">
                                         <a class="home-product-item-link" href="/product7.html">
                                             <div class="home-product-item">
-                                                <div class="home-product-item-img" style="background-image: url(https://down-vn.img.susercontent.com/file/8808f23d33f856abafb8084dfeccc400_tn);"></div>
+                                                <div class="home-product-item-img" style="background-image: url(https://down-vn.img.susercontent.com/file/fec9b5a1405d1063cf57c5ecc0035643);"></div>
                                                 <!-- <img class="home-product-item-img" src="https://down-vn.img.susercontent.com/file/8808f23d33f856abafb8084dfeccc400_tn" alt=""> -->
                                                 <div class="home-product-item-info">
-                                                    <span class="home-product-item-name">Máy ảnh Canon EOS RP (Body)- hàng chính hãng Lê Bảo Minh</span>
+                                                    <span class="home-product-item-name">Giấy Zeiss - Giấy Zeiss lau lens , ống kính, lens máy ảnh, mắt kính, màn hình - 1 Miếng 3,000 VND</span>
                                                     <div class="home-product-item-price">
                                                         <!-- <span class="home-product-item-price-old-icon">₫</span>
                                                         <span class="home-product-item-price-old">20.590.000</span> -->
                                                         <div class="home-product-item-price-current-box">
                                                             <span class="home-product-item-price-current-icon">₫</span>
-                                                            <span class="home-product-item-price-current">29.590.000</span>
+                                                            <span class="home-product-item-price-current">4.000</span>
                                                         </div>
                                                     </div>
                                                     <div class="home-product-item-soldinfo">
@@ -540,14 +540,14 @@
                                                             <i class="home-product-item-rating-icon fa-solid fa-star"></i>
                                                             <i class="home-product-item-rating-icon fa-solid fa-star"></i>
                                                         </div>
-                                                        <div class="home-product-item-soldcount">Đã bán 1</div>
+                                                        <div class="home-product-item-soldcount">Đã bán 5,4k</div>
                                                     </div>
                                                     <div class="home-product-item-favorite">
                                                         <span>Yêu thích</span></div>
-                                                    <div class="home-product-item-saleoff">
+                                                    <!-- <div class="home-product-item-saleoff">
                                                         <span class="home-product-item-saleoff-percent">10%</span>
                                                         <span class="home-product-item-saleoff-lable">GIẢM</span>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </a>
@@ -556,16 +556,16 @@
                                     <div class="grid__column-2-4">
                                         <a class="home-product-item-link" href="/product8.html">
                                             <div class="home-product-item">
-                                                <div class="home-product-item-img" style="background-image: url(https://down-vn.img.susercontent.com/file/8808f23d33f856abafb8084dfeccc400_tn);"></div>
+                                                <div class="home-product-item-img" style="background-image: url(https://down-vn.img.susercontent.com/file/vn-11134201-23020-fvjkb86mcunv85);"></div>
                                                 <!-- <img class="home-product-item-img" src="https://down-vn.img.susercontent.com/file/8808f23d33f856abafb8084dfeccc400_tn" alt=""> -->
                                                 <div class="home-product-item-info">
-                                                    <span class="home-product-item-name">Máy ảnh Canon EOS RP (Body)- hàng chính hãng Lê Bảo Minh</span>
+                                                    <span class="home-product-item-name">Gimbal chống rung cho điện thoại S5B 3-AXIS - Tay cầm chống rung cực độ, khả năng quay theo vật chủ tốt, pin cao đến 10h</span>
                                                     <div class="home-product-item-price">
-                                                        <!-- <span class="home-product-item-price-old-icon">₫</span>
-                                                        <span class="home-product-item-price-old">20.590.000</span> -->
+                                                        <span class="home-product-item-price-old-icon">₫</span>
+                                                        <span class="home-product-item-price-old">2.000.000</span>
                                                         <div class="home-product-item-price-current-box">
                                                             <span class="home-product-item-price-current-icon">₫</span>
-                                                            <span class="home-product-item-price-current">29.590.000</span>
+                                                            <span class="home-product-item-price-current">1.346.400</span>
                                                         </div>
                                                     </div>
                                                     <div class="home-product-item-soldinfo">
@@ -576,12 +576,12 @@
                                                             <i class="home-product-item-rating-icon fa-solid fa-star"></i>
                                                             <i class="home-product-item-rating-icon fa-solid fa-star"></i>
                                                         </div>
-                                                        <div class="home-product-item-soldcount">Đã bán 1</div>
+                                                        <div class="home-product-item-soldcount">Đã bán 23</div>
                                                     </div>
                                                     <div class="home-product-item-favorite">
                                                         <span>Yêu thích</span></div>
                                                     <div class="home-product-item-saleoff">
-                                                        <span class="home-product-item-saleoff-percent">10%</span>
+                                                        <span class="home-product-item-saleoff-percent">33%</span>
                                                         <span class="home-product-item-saleoff-lable">GIẢM</span>
                                                     </div>
                                                 </div>
@@ -592,16 +592,16 @@
                                     <div class="grid__column-2-4">
                                         <a class="home-product-item-link" href="/product9.html">
                                             <div class="home-product-item">
-                                                <div class="home-product-item-img" style="background-image: url(https://down-vn.img.susercontent.com/file/8808f23d33f856abafb8084dfeccc400_tn);"></div>
+                                                <div class="home-product-item-img" style="background-image: url(https://down-vn.img.susercontent.com/file/vn-11134207-7qukw-lib5yuiaf74i0c);"></div>
                                                 <!-- <img class="home-product-item-img" src="https://down-vn.img.susercontent.com/file/8808f23d33f856abafb8084dfeccc400_tn" alt=""> -->
                                                 <div class="home-product-item-info">
-                                                    <span class="home-product-item-name">Máy ảnh Canon EOS RP (Body)- hàng chính hãng Lê Bảo Minh</span>
+                                                    <span class="home-product-item-name">Ống Kính Canon 17-85mm f/4-5.6 IS USM cho Crop Canon Có chống rung Tặng kèm Loa Che Nắng,fillter bảo vệ Mới 95-98%</span>
                                                     <div class="home-product-item-price">
                                                         <!-- <span class="home-product-item-price-old-icon">₫</span>
                                                         <span class="home-product-item-price-old">20.590.000</span> -->
                                                         <div class="home-product-item-price-current-box">
                                                             <span class="home-product-item-price-current-icon">₫</span>
-                                                            <span class="home-product-item-price-current">29.590.000</span>
+                                                            <span class="home-product-item-price-current">1.999.000</span>
                                                         </div>
                                                     </div>
                                                     <div class="home-product-item-soldinfo">
@@ -612,14 +612,14 @@
                                                             <i class="home-product-item-rating-icon fa-solid fa-star"></i>
                                                             <i class="home-product-item-rating-icon fa-solid fa-star"></i>
                                                         </div>
-                                                        <div class="home-product-item-soldcount">Đã bán 1</div>
+                                                        <div class="home-product-item-soldcount">Đã bán 84</div>
                                                     </div>
-                                                    <div class="home-product-item-favorite">
+                                                    <!-- <div class="home-product-item-favorite">
                                                         <span>Yêu thích</span></div>
                                                     <div class="home-product-item-saleoff">
                                                         <span class="home-product-item-saleoff-percent">10%</span>
                                                         <span class="home-product-item-saleoff-lable">GIẢM</span>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </a>
