--- a/product6.html
+++ b/product6.html
@@ -247,12 +247,12 @@
                             <a class="product-path-link" href="/shop.html">Máy Ảnh & Máy Quay Phim</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
                         </li>
                         <li class="product-path-item">
-                            <a class="product-path-link" href="">Máy ảnh - Máy quay phim</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
+                            <a class="product-path-link" href="">Ống kính</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
                         </li>
                         <li class="product-path-item">
-                            <a class="product-path-link" href="">Máy ảnh không gương lật</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
+                            <a class="product-path-link" href="">Phụ kiện ống kính</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
                         </li>
-                        <li class="product-path-item-current-name ">Máy ảnh Canon EOS RP ( Body / Kit )</li>
+                        <li class="product-path-item-current-name ">Bộ Nắp đậy Body + lens Panasonic Lumix - M43</li>
                     </ul>
                 </div>
                 <div class="product-content">
@@ -261,14 +261,14 @@
                             <div class="product-image">
                                 <div class="product-image-preview">
                                     <div class="product-image-preview-top">
-                                        <img class="product-image-preview-top-img" src="https://down-vn.img.susercontent.com/file/b85cecd1da8d985c969009c2c60321f0" alt="">
+                                        <img class="product-image-preview-top-img" src="https://down-vn.img.susercontent.com/file/sg-11134201-23010-66cuhzn5nwmv12" alt="">
                                         <!-- <img class="product-image-preview-top-img1" src="https://down-vn.img.susercontent.com/file/vn-50009109-d851329f3c4a8c69292bbb5fd791186b" alt=""> -->
                                     </div>
                                     <div class="product-image-preview-bottom">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/b85cecd1da8d985c969009c2c60321f0_tn" onmouseover="displayLargeImage(this)" alt="">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/2e7be73cef259506f59e4af57b2f92c3_tn" onmouseover="displayLargeImage(this)" alt="">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/aaba81687348073a06707f5350642f8c_tn" onmouseover="displayLargeImage(this)" alt="">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/21a21e8f228754d10ad68aa8a00ff6ff_tn" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/sg-11134201-23010-66cuhzn5nwmv12" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/sg-11134201-23010-ie7v8yn5nwmve1" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/sg-11134201-23010-fqisp2n5nwmvd1" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/sg-11134201-23010-hb6sb1n5nwmv31" onmouseover="displayLargeImage(this)" alt="">
                                     </div>
                                 </div>
                                 <div class="product-likesrate">
@@ -280,25 +280,25 @@
                             <div class="product-info">
                                 <!-- <div class="product-info-favorite">
                                     <span>Yêu thích</span></div> -->
-                                <span class="product-info-name">Máy ảnh Canon EOS RP ( Body / Kit )</span>
+                                <span class="product-info-name">Bộ Nắp đậy Body + lens Panasonic Lumix - M43</span>
                                 <div class="product-soldcount">
-                                    <span class="product-soldcount-rate">Chưa Có Đánh Giá</span>
+                                    <span class="product-soldcount-rate">1 Đánh Giá</span>
                                     <div class="product-soldcount-num">
-                                        <span class="product-soldcount-num-number">0</span>
+                                        <span class="product-soldcount-num-number">4</span>
                                         <span class="product-soldcount-num-text">Đã Bán</span>
                                     </div>
                                     <button class="product-soldcount-report">Tố Cáo</button>
                                 </div>
-                                <div class="product-price">₫29.590.000 - ₫62.370.000</div>
+                                <div class="product-price">₫50.000</div>
                                 <div class="product-contain">
-                                    <div class="product-contain-coupon">
+                                    <!-- <div class="product-contain-coupon">
                                         <div class="product-contain-coupon-lable">Mã Giảm Giá Của Shop</div>
                                         <div class="product-contain-coupon-mini">
                                             <span class="product-contain-coupon-ticket">Giảm ₫300k</span>
                                             <span class="product-contain-coupon-ticket">Giảm ₫10k</span>
                                         </div>
-                                    </div>
-                                    <div class="product-contain-installment">
+                                    </div> -->
+                                    <!-- <div class="product-contain-installment">
                                         <div class="product-contain-installment-lable">0% TRẢ GÓP</div>
                                         <div class="product-contain-installment-contain">12 tháng x ₫2.465.833 (Lãi suất 0%)</div>
                                         <button class="product-contain-installment-btn">Xem thêm
@@ -310,7 +310,7 @@
                                         <div class="product-contain-insurance-contain">Bảo hiểm Thiết bị điện tử</div>
                                         <div class="product-contain-insurance-icon">Mới</div>
                                         <a href="" class="product-contain-insurance-link">Tìm hiểu thêm</a>
-                                    </div>
+                                    </div> -->
                                     <div class="product-contain-shipping">
                                         <div class="product-contain-shipping-lable">Vận Chuyển</div>
                                         <div class="product-contain-shipping-contain">
@@ -338,11 +338,11 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="product-contain-classify">
+                                    <!-- <div class="product-contain-classify">
                                         <div class="product-contain-classify-lable">Phân Loại</div>
                                         <button class="product-contain-classify-btn" onclick="selectButton(this)">Body</button>
                                         <button class="product-contain-classify-btn" onclick="selectButton(this)">Kit RF 24-105</button>
-                                    </div>
+                                    </div> -->
                                     <div class="product-contain-classify-quantity">
                                         <div class="product-contain-classify-quantity-lable">Số Lượng</div>
                                         <button class="product-contain-classify-quantity-btn" onclick="changeQuantity(-1)">
@@ -352,7 +352,7 @@
                                         <button class="product-contain-classify-quantity-btn" onclick="changeQuantity(1)">
                                             <i class="product-contain-classify-quantity-btn-plus fa-solid fa-plus"></i>
                                         </button>
-                                        <div class="product-contain-classify-quantity-remain">10 sản phẩm có sẵn</div>
+                                        <div class="product-contain-classify-quantity-remain">46 sản phẩm có sẵn</div>
                                     </div>
                                     <div class="product-contain-buy-options">
                                         <button class="product-contain-puttocart">
@@ -386,10 +386,10 @@
                                                         <a class="product-specification-details-item-link" href="">Máy Ảnh & Máy Quay Phim</a><i class="product-specification-details-path-item-icon fa-solid fa-chevron-right"></i>
                                                     </li>
                                                     <li class="product-specification-details-path-item">
-                                                        <a class="product-specification-details-item-link" href="">Máy ảnh - Máy quay phim</a><i class="product-specification-details-path-item-icon fa-solid fa-chevron-right"></i>
+                                                        <a class="product-specification-details-item-link" href="">Ống kính</a><i class="product-specification-details-path-item-icon fa-solid fa-chevron-right"></i>
                                                     </li>
                                                     <li class="product-specification-details-path-item">
-                                                        <a class="product-specification-details-item-link" href="">Máy ảnh không gương lật</a>
+                                                        <a class="product-specification-details-item-link" href="">Phụ kiện ống kính</a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -397,10 +397,10 @@
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Thương hiệu</div>
                                             <div class="product-specification-details-item-content">
-                                                <a class="product-specification-details-item-link" href="">Canon</a>
+                                                <a class="product-specification-details-item-link" href="">Panasonic</a>
                                             </div>
                                         </li>
-                                        <li class="product-specification-details-item">
+                                        <!-- <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Hạn bảo hành</div>
                                             <div class="product-specification-details-item-content">24 tháng</div>
                                         </li>
@@ -411,10 +411,10 @@
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Trọng lượng</div>
                                             <div class="product-specification-details-item-content">500g</div>
-                                        </li>
+                                        </li> -->
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Kho hàng</div>
-                                            <div class="product-specification-details-item-content">20</div>
+                                            <div class="product-specification-details-item-content">46</div>
                                         </li>
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Gửi từ</div>
@@ -425,19 +425,13 @@
                                 <div class="product-specification-details-bottom">
                                     <header class="product-specification-details-header">MÔ TẢ SẢN PHẨM</header>
                                     <div class="product-specification-details-item-describe">
-                                        <p class="product-specification-details-item-describe-paragraph">TÍNH NĂNG NỔI BẬT 
-                                            Cảm biến CMOS full-frame 26.2 megapixels
-                                            Bộ xử lý hình ảnh DIGIC 8
-                                            - 4.779 vị trí lấy nét chọn lọc
-                                            Màn hình LCD 3.0inch cảm ứng
-                                            Tốc độ màn trập	30 1/4000 giây
-                                            Tốc độ chụp	5 ảnh/ giây
-                                            Độ nhạy sáng ISO 100 40000 (mở rộng 102400)
-                                            Quay phim 4K 3840 x 2160 (30p)
-                                            Chống rung quang học kép Dual Sensing IS
-                                            Tích hợp Wifi/ Bluetooth
-                                            Trọng lượng	485g (thân máy)
-                                            Pin tương thích	LP-E17
+                                        <p class="product-specification-details-item-describe-paragraph">* Thương hiệu: panasonic
+                                            - Nắp đậy body ngàm M43 như Panasonic Lumix - Olympus
+                                            - Nắp cap sau ống kính ngàm M43
+                                            - Bảo vệ ống kính và body tránh bụi từ môi trường, va đập và trầy xước
+                                            
+                                            ☎: 0938.324.320 Mr Tín
+                                            🏤: 91/32 Nguyễn Hồng Đào. Phường 14. Tân Bình. TPHCM                                            
                                         </p>
                                     </div>
                                 </div>
