--- a/shop.html
+++ b/shop.html
@@ -243,9 +243,9 @@
                                     <i class="sort-options-icon fa-solid fa-angle-down fa-xl"></i>
                                     <ul class="sort-option-list">
                                         <li class="sort-option-item">
-                                            <a class="sort-option-link" href="">Giá: Thấp đến Cao</a></li>
+                                            <a class="sort-option-link" href="" data-sort="asc">Giá: Thấp đến Cao</a></li>
                                         <li class="sort-option-item">
-                                            <a class="sort-option-link" href="">Giá: Cao đến Thấp</a>
+                                            <a class="sort-option-link" href="" data-sort="desc">Giá: Cao đến Thấp</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -265,7 +265,7 @@
                             </div>
                             <div class="home-product">
                                 <div class="grid__row">
-                                    <div class="grid__column-2-4">
+                                    <div class="grid__column-2-4" id="home-product">
                                         <a class="home-product-item-link" href="/product.html" onclick="showProductDetails('product1')">
                                             <div class="home-product-item">
                                                 <div class="home-product-item-img" style="background-image: url(https://down-vn.img.susercontent.com/file/8808f23d33f856abafb8084dfeccc400_tn);"></div>
