--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                                         </div>
                                     </li>
                                     <li class="contain-section-item">
-                                        <div class="contain-section-item-top">
+                                        <div class="contain-section-item-top contain-section-item-top-active">
                                             <a href="/shop.html" class="contain-section-item-link">
                                                 <img class="contain-section-item-img" src="https://down-vn.img.susercontent.com/file/ec14dd4fc238e676e43be2a911414d4d_tn" alt="">
                                                 <span class="contain-section-item-content">Máy Ảnh & Máy Quay Phim</span>
