--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <a href="" class="header-search-history-link">Búp bê bằng bông biết bay bay bay</a>
                             <a href="" class="header-search-history-link">Một con vịt xòe ra hai cái cánh</a>
                         </div>
-                        <a class="search-btn" href="">
+                        <a class="search-btn" href="/shop.html">
                             <i class="search-logo fa-solid fa-magnifying-glass fa-xl"></i>
                         </a>
                         <div class="hearder-suggest">
