--- a/home/index.html
+++ b/home/index.html
@@ -6,12 +6,12 @@
     <title>Shopee (beta)</title>
     <link rel="shortcut icon" type="x-icon" href="https://www.freepnglogos.com/uploads/shopee-logo-png/shopee-logo-shop-with-the-gentlemen-collection-and-win-the-shopee-0.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="assets\css\base.css">
-    <link rel="stylesheet" href="assets/css/shop.css">
+    <link rel="stylesheet" href="/assets/css/base.css">
+    <link rel="stylesheet" href="/assets/css/shop.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/font/fontawesome-free-6.4.0-web/css/all.css">
+<link rel="stylesheet" href="/assets/font/fontawesome-free-6.4.0-web/css/all.css">
 </head>
 <body>
     <div class="main">
@@ -281,7 +281,7 @@
                 <div class="contain-main">
                     <div class="grid">
                         <div class="contain-section">
-                            <a class="contain-section-header-link" href="/shop.html">
+                            <a class="contain-section-header-link" href="/shop/shop.html">
                                 <header class="contain-section-header">
                                     DANH MỤC
                                 </header>
@@ -346,7 +346,7 @@
                                     </li>
                                     <li class="contain-section-item">
                                         <div class="contain-section-item-top contain-section-item-top-active">
-                                            <a href="/shop.html" class="contain-section-item-link">
+                                            <a href="/shop/shop.html" class="contain-section-item-link">
                                                 <img class="contain-section-item-img" src="https://down-vn.img.susercontent.com/file/ec14dd4fc238e676e43be2a911414d4d_tn" alt="">
                                                 <span class="contain-section-item-content">Máy Ảnh & Máy Quay Phim</span>
                                             </a>
@@ -657,37 +657,37 @@
                             <ul class="footer-nations-list">
                                 <li class="footer-nations-item">Quốc gia & Khu vực:</li>
                                 <li class="footer-nations-item footer-nations-item-separate">
-                                    <a class="footer-nations-item-link" href="">Singapore</a>
+                                    <a class="footer-nations-item-link" href="https://shopee.sg/">Singapore</a>
                                 </li>
                                 <li class="footer-nations-item footer-nations-item-separate">
-                                    <a class="footer-nations-item-link" href="">Indonesia</a>
+                                    <a class="footer-nations-item-link" href="https://shopee.co.id/">Indonesia</a>
                                 </li>
                                 <li class="footer-nations-item footer-nations-item-separate">
-                                    <a class="footer-nations-item-link" href="">Đài Loan</a>
+                                    <a class="footer-nations-item-link" href="https://shopee.tw/">Đài Loan</a>
                                 </li>
                                 <li class="footer-nations-item footer-nations-item-separate">
-                                    <a class="footer-nations-item-link" href="">Thái Lan</a>
+                                    <a class="footer-nations-item-link" href="https://shopee.co.th/">Thái Lan</a>
                                 </li>
                                 <li class="footer-nations-item footer-nations-item-separate">
-                                    <a class="footer-nations-item-link" href="">Malaysia</a>
+                                    <a class="footer-nations-item-link" href="https://shopee.com.my/">Malaysia</a>
                                 </li>
                                 <li class="footer-nations-item footer-nations-item-separate">
-                                    <a class="footer-nations-item-link" href="">Việt Nam</a>
+                                    <a class="footer-nations-item-link" href="/home/index.html">Việt Nam</a>
                                 </li>
                                 <li class="footer-nations-item footer-nations-item-separate">
-                                    <a class="footer-nations-item-link" href="">Philippines</a>
+                                    <a class="footer-nations-item-link" href="https://shopee.ph/">Philippines</a>
                                 </li>
                                 <li class="footer-nations-item footer-nations-item-separate">
-                                    <a class="footer-nations-item-link" href="">Brazil</a>
+                                    <a class="footer-nations-item-link" href="https://shopee.com.br/">Brazil</a>
                                 </li>
                                 <li class="footer-nations-item footer-nations-item-separate">
-                                    <a class="footer-nations-item-link" href="">México</a>
+                                    <a class="footer-nations-item-link" href="https://shopee.com.mx/">México</a>
                                 </li>
                                 <li class="footer-nations-item footer-nations-item-separate">
-                                    <a class="footer-nations-item-link" href="">Colombia</a>
+                                    <a class="footer-nations-item-link" href="https://shopee.com.co/">Colombia</a>
                                 </li>
                                 <li class="footer-nations-item">
-                                    <a class="footer-nations-item-link" href="">Chile</a>
+                                    <a class="footer-nations-item-link" href="https://shopee.cl/">Chile</a>
                                 </li>
                             </ul>
                         </div>
@@ -698,24 +698,24 @@
                         <div class="footer-license-policy">
                             <ul class="footer-license-policy-list">
                                 <li class="footer-license-policy-item">
-                                    <a class="footer-license-policy-link" href="">CHÍNH SÁCH BẢO MẬT</a>
+                                    <a class="footer-license-policy-link" href="https://help.shopee.vn/portal/article/77244">CHÍNH SÁCH BẢO MẬT</a>
                                 </li>
                                 <li class="footer-license-policy-item">
-                                    <a class="footer-license-policy-link" href="">QUY CHẾ HOẠT ĐỘNG</a>
+                                    <a class="footer-license-policy-link" href="https://help.shopee.vn/portal/article/77245">QUY CHẾ HOẠT ĐỘNG</a>
                                 </li>
                                 <li class="footer-license-policy-item">
-                                    <a class="footer-license-policy-link" href="">CHÍNH SÁCH VẬN CHUYỂN</a>
+                                    <a class="footer-license-policy-link" href="https://help.shopee.vn/portal/article/77250">CHÍNH SÁCH VẬN CHUYỂN</a>
                                 </li>
                                 <li class="footer-license-policy-item">
-                                    <a class="footer-license-policy-link" href="">CHÍNH SÁCH TRẢ HÀNG VÀ HOÀN TIỀN</a>
+                                    <a class="footer-license-policy-link" href="https://help.shopee.vn/portal/article/77251">CHÍNH SÁCH TRẢ HÀNG VÀ HOÀN TIỀN</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="footer-license-certification">
-                            <a class="footer-license-certification-link" href="">
+                            <a class="footer-license-certification-link" href="http://online.gov.vn/HomePage/WebsiteDisplay.aspx?DocId=18375">
                                 <img class="footer-license-certification-img" src="/assets/img/logoCCDV.png" alt="">
                             </a>
-                            <a class="footer-license-certification-link" href="">
+                            <a class="footer-license-certification-link" href="http://online.gov.vn/HomePage/AppDisplay.aspx?DocId=29">
                                 <img class="footer-license-certification-img" src="/assets/img/logoCCDV.png" alt="">
                             </a>
                             <!-- <a class="footer-license-certification-link" href="">
