--- a/product/product.html
+++ b/product/product.html
@@ -22,6 +22,6 @@
     </div>
 
     <script src="/shop/shop.js"></script>
-    <script src="/product.js"></script>
+    <script src="/product/product.js"></script>
 </body>
 </html>
