--- a/shop/shop.html
+++ b/shop/shop.html
@@ -712,7 +712,7 @@
     </div>
 
     <script src="/shop/shop.js"></script>
-    <script src="/product.js"></script>
+    <script src="/product/product.js"></script>
     <script>
         $(function() {
             $("#header").load("/base/header.html");
