--- a/shop/shop.html
+++ b/shop/shop.html
@@ -84,7 +84,39 @@
                             <div class="home-product">
                                 <div class="grid__row">
                                     <div class="grid__column-2-4" id="home-product">
-                                        
+                                        <a class="home-product-item-link" href="/product/product.html?id=0" data-category="category2">
+                                            <div class="home-product-item">
+                                                <div class="home-product-item-img" style="background-image: url(https://down-vn.img.susercontent.com/file/8808f23d33f856abafb8084dfeccc400_tn);"></div>
+                                                <!-- <img class="home-product-item-img" src="https://down-vn.img.susercontent.com/file/8808f23d33f856abafb8084dfeccc400_tn" alt=""> -->
+                                                <div class="home-product-item-info">
+                                                    <span class="home-product-item-name">Máy ảnh Canon EOS RP (Body)- hàng chính hãng Lê Bảo Minh</span>
+                                                    <div class="home-product-item-price">
+                                                        <!-- <span class="home-product-item-price-old-icon">₫</span>
+                                                        <span class="home-product-item-price-old">20.590.000</span> -->
+                                                        <div class="home-product-item-price-current-box">
+                                                            <span class="home-product-item-price-current-icon">₫</span>
+                                                            <span class="home-product-item-price-current">29.590.000</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="home-product-item-soldinfo">
+                                                        <div class="home-product-item-rating">
+                                                            <i class="home-product-item-rating-icon fa-solid fa-star"></i>
+                                                            <i class="home-product-item-rating-icon fa-solid fa-star"></i>
+                                                            <i class="home-product-item-rating-icon fa-solid fa-star"></i>
+                                                            <i class="home-product-item-rating-icon fa-solid fa-star"></i>
+                                                            <i class="home-product-item-rating-icon fa-solid fa-star"></i>
+                                                        </div>
+                                                        <div class="home-product-item-soldcount">Đã bán 5</div>
+                                                    </div>
+                                                    <div class="home-product-item-favorite">
+                                                        <span>Yêu thích</span></div>
+                                                    <!-- <div class="home-product-item-saleoff">
+                                                        <span class="home-product-item-saleoff-percent">10%</span>
+                                                        <span class="home-product-item-saleoff-lable">GIẢM</span>
+                                                    </div> -->
+                                                </div>
+                                            </div>
+                                        </a>
                                         
                                     </div>
                                     <div class="grid__column-2-4">
