--- a/shop/shop.html
+++ b/shop/shop.html
@@ -408,7 +408,7 @@
                                         
                                     </div>
                                     <div class="grid__column-2-4">
-                                        <a class="home-product-item-link" href="/product/product.html?id=9" data-category="category4">
+                                        <a class="home-product-item-link" href="/product/product9.html" data-category="category4">
                                             <div class="home-product-item">
                                                 <div class="home-product-item-img" style="background-image: url(https://down-vn.img.susercontent.com/file/vn-11134207-7qukw-lib5yuiaf74i0c);"></div>
                                                 <!-- <img class="home-product-item-img" src="https://down-vn.img.susercontent.com/file/8808f23d33f856abafb8084dfeccc400_tn" alt=""> -->
@@ -714,10 +714,7 @@
     <script src="/shop/shop.js"></script>
     <script src="/product/product.js"></script>
     <script>
-        $(function() {
-            $("#header").load("/base/header.html");
-            $("#footer").load("/base/footer.html");
-        });
+        
     </script>
 </body>
 </html>
