--- a/product/product1.html
+++ b/product/product1.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/assets/font/fontawesome-free-6.4.0-web/css/all.css">
     </head>
 <body>
+    <div id="header"></div>
     <div class="product-page-container">
           <div class="grid">
               <div class="product-path">
@@ -311,6 +312,7 @@
               </div>
           </div>
       </div>
+      <div id="footer"></div>
     <script src="/product/product.js"></script>
 </body>
 </html>      
